# Capstone_Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: movieTitles.csv
notebooks/: exploration.ipynb
predictions/: bias_model_preds.parquet  global_mean_preds.parquet  knn_preds.parquet  movie_embeddings.parquet  movie_mean_preds.parquet  svd_preds.parquet  time_bias_model_preds.parquet
src/: baseline.py  evaluation.py  extract_model.py  knn.py  model.py  parsing.py  preprocessing.py  reg.ipynb  svd.py  visualize_embeddings.py
