[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone"
version = "0.1.0"
requires-python = ">=3.10,<3.12"

dependencies = [
    "numpy<2",                # critical: avoid NumPy 2.x
    "pandas>=1.5",
    "pyarrow",
    "fastparquet",
    "scikit-learn>=1.2",
    "scikit-surprise==1.1.4"  # explicitly use correct package name + version
]